playtesting/sim-reports/archive/v1.0-alpha.62/raport_telemetrii.md
# Raport Telemetrii i Szans Wygranych (Win Shares) dla Wszystkich 16 Setupów — Wersja Balansu: v1.0-alpha.62

**Wersja Balansu:** `v1.0-alpha.62` | **Data:** 2026-08-24 06:54 | **Wielkość Próby:** 1000 gier/setup (16000 gier łącznie) | **Czas Symulacji:** 4.86s

*Score* = legacy (win share + kara witalności w jednym wykładniku). *Balance* = tylko równość win share.

## 1. Tabela Szans Wygranych Frakcji (Win Share %) vs Punkt Idealny

| Setup | Gr. | Score | Balance | Ideal % | SO % | CAA % | KB % | KT % | GC % | Status Rozkładu Frakcji |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | 3 | 🟡 ** 85.5** | 🟡 85.5 | 33.3% | - | 34.7% | - | 29.2% | 36.1% | 🟡 AKCEPTOWALNY |
| `3p-cienie-korona-gildia` | 3 | 🔴 ** 40.3** | 🔴 40.3 | 33.3% | - | 18.7% | 32.8% | - | 48.5% | 🔴 ODCHYLONY |
| `3p-cienie-korona-kabala` | 3 | 🔴 ** 16.6** | 🔴 57.3 | 33.3% | - | 21.7% | 39.6% | 38.7% | - | 🔴 ODCHYLONY |
| `3p-korona-kabala-gildia` | 3 | 🔴 ** 45.6** | 🔴 51.4 | 33.3% | - | - | 31.4% | 22.8% | 45.8% | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-gildia` | 3 | 🔴 **  5.3** | 🔴 21.0 | 33.3% | 58.9% | 26.7% | - | - | 14.4% | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-kabala` | 3 | 🔴 ** 21.2** | 🔴 31.1 | 33.3% | 54.1% | 19.9% | - | 26.0% | - | 🔴 ODCHYLONY |
| `3p-oficjum-alandalus-korona` | 3 | 🔴 ** 54.0** | 🟠 62.2 | 33.3% | 41.0% | 23.6% | 35.4% | - | - | 🔴 ODCHYLONY |
| `3p-oficjum-kabala-gildia` | 3 | 🔴 **  0.1** | 🔴 3.5 | 33.3% | 82.2% | - | - | 11.3% | 6.5% | 🔴 ODCHYLONY |
| `3p-oficjum-korona-gildia` | 3 | 🔴 **  0.4** | 🔴 8.7 | 33.3% | 71.3% | - | 15.6% | - | 13.1% | 🔴 ODCHYLONY |
| `3p-oficjum-korona-kabala` | 3 | 🔴 ** 10.2** | 🔴 33.9 | 33.3% | 49.6% | - | 15.4% | 35.0% | - | 🔴 ODCHYLONY |
| `4p-core` | 4 | 🟠 ** 67.0** | 🟠 67.0 | 25.0% | 20.4% | 21.0% | 32.1% | 26.5% | - | 🟠 WYMAGA UWAGI |
| `4p-no-cienie` | 4 | 🔴 **  6.5** | 🔴 48.3 | 25.0% | 36.6% | - | 19.7% | 26.9% | 16.8% | 🔴 ODCHYLONY |
| `4p-no-kabala` | 4 | 🟡 ** 78.2** | 🟡 78.2 | 25.0% | 20.0% | 26.0% | 28.9% | - | 25.1% | 🟡 AKCEPTOWALNY |
| `4p-no-korona` | 4 | 🟢 ** 96.4** | 🟢 96.4 | 25.0% | 25.9% | 24.0% | - | 25.3% | 24.8% | 🟢 ZBALANSOWANY |
| `4p-no-oficjum` | 4 | 🔴 ** 58.4** | 🔴 58.4 | 25.0% | - | 16.2% | 24.6% | 26.1% | 33.1% | 🔴 ODCHYLONY |
| `5p-full` | 5 | 🔴 **  2.6** | 🔴 37.1 | 20.0% | 34.3% | 16.4% | 15.1% | 22.0% | 12.2% | 🔴 ODCHYLONY |

## 2. Pełna Tabela Telemetrii 5 Filarów Silnika Gry z Oceną Optymalności

| Setup | Średnia Er | Limit Er % (Deadlock) | Pas Biedy % (Złoto) | Autodafé / Partię | Oskarżenia / Partię | Śr. Złoto End | Śr. Herezja End | Globalny Status Telemetrii |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | 6.22 🟢 | 0.0% 🟢 | 0.2% 🟢 | 1.18 🟢 | 6.28 🔴 | 9.75zł | 8.06 | 🟢 OPTYMALNA |
| `3p-cienie-korona-gildia` | 6.82 🟡 | 0.0% 🟢 | 6.3% 🟢 | 1.21 🟢 | 7.69 🔴 | 9.35zł | 9.22 | ⚠️ WARTOŚCI BRZEGOWE |
| `3p-cienie-korona-kabala` | 6.78 🟡 | 1.1% 🟢 | 6.5% 🟢 | 1.23 🟢 | 5.92 🔴 | 8.16zł | 7.75 | ⚠️ WARTOŚCI BRZEGOWE |
| `3p-korona-kabala-gildia` | 6.41 🟢 | 0.0% 🟢 | 7.0% 🟢 | 1.12 🟢 | 6.91 🔴 | 2.88zł | 8.69 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-gildia` | 5.9 🟢 | 0.0% 🟢 | 2.1% 🟢 | 1.57 🟢 | 6.52 🔴 | 10.49zł | 9.29 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-kabala` | 5.74 🟢 | 0.0% 🟢 | 1.9% 🟢 | 1.68 🟢 | 4.98 🟡 | 8.54zł | 8.29 | 🟢 OPTYMALNA |
| `3p-oficjum-alandalus-korona` | 6.61 🟡 | 0.0% 🟢 | 6.9% 🟢 | 1.71 🟢 | 6.67 🔴 | 8.64zł | 9.11 | ⚠️ WARTOŚCI BRZEGOWE |
| `3p-oficjum-kabala-gildia` | 4.89 🟡 | 0.0% 🟢 | 2.7% 🟢 | 1.38 🟢 | 5.29 🔴 | 3.6zł | 8.91 | ⚠️ WARTOŚCI BRZEGOWE |
| `3p-oficjum-korona-gildia` | 5.77 🟢 | 0.0% 🟢 | 8.4% 🟢 | 1.4 🟢 | 6.61 🔴 | 3.57zł | 9.73 | 🟢 OPTYMALNA |
| `3p-oficjum-korona-kabala` | 5.69 🟢 | 0.0% 🟢 | 8.6% 🟢 | 1.53 🟢 | 5.21 🔴 | 2.19zł | 8.67 | 🟢 OPTYMALNA |
| `4p-core` | 6.07 🟢 | 0.0% 🟢 | 6.0% 🟢 | 1.59 🟢 | 6.68 🔴 | 6.77zł | 7.94 | 🟢 OPTYMALNA |
| `4p-no-cienie` | 5.57 🟢 | 0.0% 🟢 | 7.1% 🟢 | 1.4 🟢 | 6.81 🔴 | 3.05zł | 8.64 | 🟢 OPTYMALNA |
| `4p-no-kabala` | 6.09 🟢 | 0.0% 🟢 | 6.6% 🟢 | 1.44 🟢 | 7.59 🔴 | 7.87zł | 8.62 | 🟢 OPTYMALNA |
| `4p-no-korona` | 5.71 🟢 | 0.0% 🟢 | 1.7% 🟢 | 1.56 🟢 | 6.85 🔴 | 7.9zł | 8.25 | 🟢 OPTYMALNA |
| `4p-no-oficjum` | 5.78 🟢 | 0.0% 🟢 | 5.1% 🟢 | 1.08 🟢 | 6.3 🔴 | 6.9zł | 7.94 | 🟢 OPTYMALNA |
| `5p-full` | 5.17 🟢 | 0.0% 🟢 | 5.2% 🟢 | 1.3 🟢 | 6.16 🔴 | 6.09zł | 7.77 | 🟢 OPTYMALNA |

## 3. Witalność Mechanik Frakcji (Mechanic Vitality & Degeneration Gate)

| Setup | Status Witalności | Kara | Zidentyfikowane Ostrzeżenia / Degradacje Mechanik |
| :--- | :---: | :---: | :--- |
| `3p-cienie-kabala-gildia` | 🟢 Pełna Witalność | 0.000 | Brak — wszystkie mechaniki aktywne i płynne |
| `3p-cienie-korona-gildia` | 🟢 Pełna Witalność | 0.000 | Brak — wszystkie mechaniki aktywne i płynne |
| `3p-cienie-korona-kabala` | ⚠️ Ostrzeżenie Witalności | 1.240 | Ekstremalny Deadlock (Era 11+): 6.2% gier (>0.5%) |
| `3p-korona-kabala-gildia` | ⚠️ Ostrzeżenie Witalności | 0.120 | Ekstremalny Deadlock (Era 11+): 0.6% gier (>0.5%) |
| `3p-oficjum-alandalus-gildia` | ⚠️ Ostrzeżenie Witalności | 1.375 | Przedwczesne Zwycięstwa (Era 1-2): 0.7% gier (>0.5%), Martwa ścieżka stosy (swiete-oficjum): 43/589 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-alandalus-kabala` | ⚠️ Ostrzeżenie Witalności | 0.380 | Nadmiar Wczesnych Zakończeń (Era 3-4): 27.4% gier (>25.0%), Ekstremalny Deadlock (Era 11+): 0.7% gier (>0.5%) |
| `3p-oficjum-alandalus-korona` | ⚠️ Ostrzeżenie Witalności | 0.140 | Ekstremalny Deadlock (Era 11+): 0.7% gier (>0.5%) |
| `3p-oficjum-kabala-gildia` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 4.664 | Przedwczesne Zwycięstwa (Era 1-2): 0.9% gier (>0.5%), Nadmiar Wczesnych Zakończeń (Era 3-4): 35.8% gier (>25.0%), Zbyt Krótka Średnia Rozgrywka 4.89 Er (<5.0 Er), Zbyt rzadkie Autodafé (1.38/partię < 1.40) — naruszenie ADR-0016 (~2 Autodafé na partię), Martwa ścieżka stosy (swiete-oficjum): 0/822 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-korona-gildia` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 3.200 | Zbyt rzadkie Autodafé (1.40/partię < 1.40) — naruszenie ADR-0016 (~2 Autodafé na partię), Martwa ścieżka stosy (swiete-oficjum): 10/713 wygranych (<8%) — gra tylko skazania |
| `3p-oficjum-korona-kabala` | ⚠️ Ostrzeżenie Witalności | 1.200 | Martwa ścieżka stosy (swiete-oficjum): 29/496 wygranych (<8%) — gra tylko skazania |
| `4p-core` | 🟢 Pełna Witalność | 0.000 | Brak — wszystkie mechaniki aktywne i płynne |
| `4p-no-cienie` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 2.000 | Zbyt rzadkie Autodafé (1.40/partię < 1.40) — naruszenie ADR-0016 (~2 Autodafé na partię) |
| `4p-no-kabala` | 🟢 Pełna Witalność | 0.000 | Brak — wszystkie mechaniki aktywne i płynne |
| `4p-no-korona` | 🟢 Pełna Witalność | 0.000 | Brak — wszystkie mechaniki aktywne i płynne |
| `4p-no-oficjum` | 🟢 Pełna Witalność | 0.000 | Brak — wszystkie mechaniki aktywne i płynne |
| `5p-full` | 🔴 Zagrożenie Witalności (Kastracja Mechanik) | 2.650 | Nadmiar Wczesnych Zakończeń (Era 3-4): 31.5% gier (>25.0%), Zbyt rzadkie Autodafé (1.30/partię < 1.40) — naruszenie ADR-0016 (~2 Autodafé na partię) |

## 4. Rozkład Długości Partii i Zwycięstw Frakcji według Er

### 4.1. Ogólny Rozkład Końca Partii według Er (Wszystkie Symulowane Gry)

| Era Końca Gry | Liczba Gier | Udział % | Wizualizacja Rozkładu | Ocena Tempa Gry |
| :---: | :---: | :---: | :--- | :--- |
| **Era 2** | 33 |   0.2% | `                    ` | 🔴 Ekstremalnie wczesna (sprint / anomalia) |
| **Era 3** | 492 |   3.1% | `██                  ` | 🟡 Wczesna / Szybka gra |
| **Era 4** | 2,467 |  15.4% | `████████            ` | 🟡 Wczesna / Szybka gra |
| **Era 5** | 3,568 |  22.3% | `███████████         ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 6** | 4,055 |  25.3% | `█████████████       ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 7** | 2,715 |  17.0% | `████████            ` | 🟢 Złote Okno Rozgrywki (Ery 5–7) |
| **Era 8** | 1,848 |  11.6% | `██████              ` | 🟡 Przedłużona / Późna gra |
| **Era 9** | 533 |   3.3% | `██                  ` | 🟡 Przedłużona / Późna gra |
| **Era 10** | 190 |   1.2% | `█                   ` | 🟡 Przedłużona / Późna gra |
| **Era 11** | 49 |   0.3% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |
| **Era 12** | 26 |   0.2% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |
| **Era 13** | 13 |   0.1% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |
| **Era 14** | 11 |   0.1% | `                    ` | 🔴 Ekstremalnie przedłużona (deadlock / anomalia) |

### 4.2. Rozkład Zwycięstw Frakcji według Er (Liczba Wygranych Partii)

| Era Końca Gry | Gry w Erze | SO (wygrane) | CAA (wygrane) | KB (wygrane) | KT (wygrane) | GC (wygrane) | Dominująca Frakcja w tej Erze |
| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| **Era 2** | 33 | 12 | 21 | 0 | 0 | 0 | **CAA (21)** |
| **Era 3** | 492 | 177 | 124 | 9 | 182 | 0 | **KT (182)** |
| **Era 4** | 2,467 | 884 | 515 | 81 | 893 | 94 | **KT (893)** |
| **Era 5** | 3,568 | 1,482 | 324 | 405 | 948 | 409 | **SO (1,482)** |
| **Era 6** | 4,055 | 976 | 858 | 1,063 | 565 | 593 | **KB (1,063)** |
| **Era 7** | 2,715 | 749 | 418 | 693 | 193 | 662 | **SO (749)** |
| **Era 8** | 1,848 | 464 | 174 | 371 | 60 | 779 | **GC (779)** |
| **Era 9** | 533 | 155 | 40 | 122 | 35 | 181 | **GC (181)** |
| **Era 10** | 190 | 36 | 8 | 102 | 7 | 37 | **KB (102)** |
| **Era 11** | 49 | 4 | 4 | 31 | 5 | 5 | **KB (31)** |
| **Era 12** | 26 | 3 | 1 | 17 | 1 | 4 | **KB (17)** |
| **Era 13** | 13 | 1 | 2 | 9 | 1 | 0 | **KB (9)** |
| **Era 14** | 11 | 0 | 0 | 3 | 8 | 0 | **KT (8)** |
| **SUMA** | **16,000** | **4,943** | **2,489** | **2,906** | **2,898** | **2,764** | **Łącznie: 100.0%** |

### 4.3. Rozkład Er w Kanonie 4P (5 Głównych Setupów)

| Setup 4P | Śr. Er | Ery 1–2 (Sprint) % | Ery 3–4 (Wczesne) % | Ery 5–7 (Złote Okno) % | Ery 8–10 (Późne) % | Ery 11+ (Deadlock) % | Główny Zwycięzca w Erze 6 |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
| `4p-core` | **6.07** |  0.1% | 14.0% | 67.1% | 18.4% |  0.4% | **KB (44.7%)** |
| `4p-no-cienie` | **5.57** |  0.1% | 18.9% | 74.5% |  6.5% |  0.0% | **KB (34.2%)** |
| `4p-no-kabala` | **6.09** |  0.0% | 11.2% | 76.8% | 12.0% |  0.0% | **KB (39.2%)** |
| `4p-no-korona` | **5.71** |  0.2% | 23.8% | 62.2% | 13.7% |  0.1% | **CAA (33.2%)** |
| `4p-no-oficjum` | **5.78** |  0.2% | 18.7% | 69.1% | 12.0% |  0.0% | **KB (41.5%)** |